fix: resolve the cors policy error_1.3